[tool.poetry]
name = "interview-gpt"
version = "0.1.0"
description = ""
authors = ["Eric Zhang <zhangeric991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13, >= 3.9"
cuid2 = "^2.0.0"
pyaudio = "^0.2.14"
scipy = "^1.11.3"
requests = "^2.31.0"
torch = "^2.1.0"
numpy = "^1.26.1"
sounddevice = "^0.4.6"
soundcard = "^0.4.2"
openai = "^1.1.1"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.4"
pypdf = "^3.17.0"
pdfminer-six = "^20221105"
soundfile = "^0.12.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
tiktoken = "^0.5.1"
typer = "^0.9.0"
termcolor = "^2.3.0"
pytest = "^7.4.3"
mypy = "^1.6.1"
ruff = "^0.1.4"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
